added failure swagger
