# Api/api/docs/swagger.yaml
@@ -910,6 +910,14 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/model.Post'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/v1.response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/v1.response'
       security:
       - BearerAuth: []
       summary: Delete Post By ID
@@ -1358,6 +1366,14 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/model.Posts'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/v1.response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/v1.response'
       security:
       - BearerAuth: []
       summary: Sort posts by stars
